# f1-mcp

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  example.md  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
connectors/: ergast_client.py
core/: serialization.py  session_cache.py  telemetry_cache.py
f1_mcp/: __init__.py  config.py  server.py
services/: advanced_analytics_service.py  driver_service.py  lap_service.py  pitstop_service.py  predictive_ai_service.py  provider_service.py  race_position_service.py  sector_service.py  session_service.py  strategy_intelligence_service.py  strategy_service.py  telemetry_intelligence_service.py  telemetry_service.py  visualization_service.py
tests/: conftest.py  test_advanced_analytics_tools.py  test_driver_tools.py  test_lap_tools.py  test_pitstop_tools.py  test_predictive_ai_tools.py  test_provider_tools.py  test_race_position_tools.py  test_sector_tools.py  test_session_tools.py  test_strategy_intelligence_tools.py  test_strategy_tools.py  test_telemetry_intelligence_tools.py  test_telemetry_tools.py  test_visualization_tools.py
tools/: advanced_analytics_tools.py  driver_tools.py  lap_tools.py  pitstop_tools.py  predictive_ai_tools.py  provider_tools.py  race_position_tools.py  sector_tools.py  session_tools.py  strategy_intelligence_tools.py  strategy_tools.py  telemetry_intelligence_tools.py  telemetry_tools.py  visualization_tools.py
(+36 files in other folders)
