[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-f1"
version = "0.1.0"
description = "Formula 1 analytics MCP server with 118+ tools powered by FastF1 and Ergast"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Luffy610" },
]
keywords = ["f1", "formula1", "mcp", "analytics", "telemetry", "fastf1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastmcp>=3.1.0",
    "fastf1>=3.8.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
f1-mcp = "f1_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Luffy610/f1-mcp"
Repository = "https://github.com/Luffy610/f1-mcp"
Issues = "https://github.com/Luffy610/f1-mcp/issues"

[tool.setuptools.packages.find]
include = ["f1_mcp*"]
